# undergrad-dissertation

./: .gitignore  CMakeLists.txt  README.md
include/History/: HistoryFigure.hpp  HistoryGenerator.hpp
include/History/HistoryEvent/: BirthEvent.hpp  HistoryEvent.hpp
include/Scenes/: Game.hpp
include/World/: City.hpp  Map.hpp  MapGenerator.hpp
src/: Main.cpp
src/Scenes/: Game.cpp
src/World/: City.cpp  Map.cpp  MapGenerator.cpp
test/: familytree.py
